plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.4'
	id 'io.spring.dependency-management' version '1.1.6'
	id 'jacoco'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

jacoco {
	toolVersion = "0.8.7"
}

jacocoTestReport {
	reports {
		csv.required = false

		xml {
			required.set(true)
			outputLocation.set(layout.buildDirectory.file("reports/jacoco/test/jacocoTestReport.xml"))
		}
		html {
			required.set(true)
			outputLocation.set(layout.buildDirectory.dir("jacocoHtml"))
		}
	}
	classDirectories.setFrom(
			files(
					classDirectories.files.collect {
						fileTree(dir: it, exclude: [
								'**/models/**',
								'**/external/omdb/**'
						])
					}
			)
	)
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-logging'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.security:spring-security-crypto'
	implementation 'org.springframework.boot:spring-boot-starter-amqp'
	implementation 'org.slf4j:slf4j-api:2.0.16'
	implementation 'org.telegram:telegrambots:6.9.7.1'
	implementation 'org.telegram:telegrambotsextensions:6.9.7.1'
	implementation 'org.telegram:telegrambots-spring-boot-starter:6.9.7.1'
	implementation 'org.postgresql:postgresql'
	implementation 'org.projectlombok:lombok'
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
	implementation 'com.fasterxml.jackson.core:jackson-core:2.15.2'
	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.2'
	compileOnly 'org.projectlombok:lombok:1.18.24'
	annotationProcessor 'org.projectlombok:lombok:1.18.24'
	implementation 'javax.xml.bind:jaxb-api:2.3.1'
	implementation 'ch.qos.logback:logback-classic'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.jacocoTestReport {
	dependsOn tasks.test
}
